Bug fix: readability and sticky footer
Adjusted styling to remove sticky footer and also adjust readability and
have consistent static background

--- a/port.css
+++ b/port.css
@@ -4,25 +4,32 @@ header{
   color: #FFFFFF;
   text-align: center;
 }
+
 body{
   color: #FFFFFF;
   min-height: 100%;
+  padding: 10px;
+  margin: 20px;
 }
+
 h3{
   font-weight: bold;
   font-family: Perpetua;
   text-decoration: underline;
 }
+
 nav{
   text-transform: uppercase;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
 }
+
 nav a{
     text-decoration: none;
     padding: 0px 60px 0px 60px;
 }
+
 nav a:hover{
   border-style: double;
   border-width: medium;
@@ -33,25 +40,27 @@ nav a:hover{
   background-color: #FFFFFF;
   color: #1919FF;
 }
+
 footer{
   align-self: center;
   text-align: center;
   color: #7F7FFF;
   background-color: #000000;
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  padding: 1rem;
+  padding: 10px;
+  margin: 20px;
+  margin-top: 70px;
 }
+
 a{
   color: #FFFFFF;
 }
+
 #email{
   text-decoration: none;
   font-weight: bold;
   font-family: monospace;
 }
+
 #email:hover{
   color: green;
   border-style: groove;
@@ -59,30 +68,41 @@ a{
   padding: 0px 10px 0px 10px;
   background: #FFFFFF;
 }
+
 dt{
   font-style: italic;
   font-family: papyrus;
 }
+
 ul{
   columns: 2;
   list-style-type: none;
 }
+
+dt,dd{
+    margin: 5px;
+}
 /*Classes defined for each individual page*/
 .page1{
-background-image: url("background/girl.png");
+    background-image: url("background/gray.jpg");
 }
+
 .page2{
   background-image: url("background/gray.jpg");
 }
+
 .page3{
   background-image: url("background/gray.jpg");
 }
+
 .page4{
-  background-image: url("background/gray.jpg");
+    background-image: url("background/gray.jpg");
 }
+
 .social{
   padding: 10px 10px 10px 10px;
 }
+
 .mid{
   text-align: center;
 }
